# naengs-streaming-relevant

naengs-streaming/: .gitignore  Cargo.toml
naengs-streaming/db_scripts/: TblChzzk.sql
naengs-streaming/diagram/: chzzk_compare_setting.drawio
naengs-streaming/src/: lib.rs  main.rs
naengs-streaming/src/services/: mod.rs
naengs-streaming/src/services/chzzk/: mod.rs
naengs-streaming/src/services/chzzk/db_models/: compare_setting_model.rs  mod.rs
naengs-streaming/src/services/chzzk/models/: common.rs  developer_apis_model.rs  mod.rs
naengs-streaming/src/services/chzzk/service/: compare_setting.rs  developer_api.rs  hc.rs  mod.rs
naengs-streaming/src/services/common/: git.rs  mod.rs
svelte/: package-lock.json  package.json  svelte.config.js
svelte/src/lib/chzzk/: layout.ts
svelte/src/routes/: +layout.svelte
svelte/src/routes/chzzk/: +layout.svelte
svelte/src/routes/chzzk/hello/: +page.svelte
