[package]
name = "naengs-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
hmac = "0.12.1"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-0_8", "with-chrono-0_4"] }
tower = { version = "0.5.2" , features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
